add rainbown function and active or desactive the pen function

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
     <main>
         <section class="grid"></section>
         <section class="input-section">
+            <section class="active-text">
+                Click inside the grid to activate the pen.
+            </section>
             <input id="color" type="color">
             <button id="color-btn">Color mode</button>
             <button id="rainbown-btn">Rainbown mode</button>
             <button id="eraser-btn">Eraser</button>
             <button id="clear-btn">Clear All</button>
-            <div id="size-bar"></div>
-            <input id="range-bar" type="range" min="1" max="64">
+            <div>
+                <div id="size-bar"></div>
+                <input id="range-bar" type="range" min="1" max="64">
+            </div>
+            
         </section>
     </main>
     <footer></footer>
